--- a/frontend/styles/SignUp.module.css
+++ b/frontend/styles/SignUp.module.css
@@ -2,10 +2,13 @@
   margin: auto;
   width: 600px;
   max-width: 90%;
-  margin-top: 40px;
-  margin-bottom: 40px;
+  padding: 40px;
+}
+
+.form {
+  margin: 40px auto;
   border: 3px solid #000;
-  padding: 20px;
+
 }
 
 .backBtn {
