--- a/frontend/styles/AIChat.module.css
+++ b/frontend/styles/AIChat.module.css
@@ -105,11 +105,13 @@
 .main {
   flex-grow: 1;
   display: flex;
+  height: calc(100vh - 122px)
 }
 
 .pageText {
   padding: 10px;
   width: 100%;
+  height: 100%;
   flex-grow: 1;
   overflow: auto;
   font-size: 90%;
@@ -145,13 +147,12 @@
   min-height: 45px;
   height: 45px;
   vertical-align: middle;
-  white-space: pre-wrap;
+  white-space: nowrap;
 }
 
 .chatMessages {
   position: relative;
   background-color: lightblue;
-  height: 1000px;
   overflow: auto;
   font-size: 90%;
   flex: 2;
@@ -168,6 +169,12 @@
 
 .talkKeyToValue {
   overflow-wrap: break-word;
+}
+
+.talkActionDiv {
+  position: absolute;
+  right: 10px;
+  bottom: 10px;
 }
 
 .border{
@@ -258,4 +265,15 @@
   font-family: Merriweather Sans, sans;
   font-weight: bold;
   padding: 10px 0;
+}
+
+.sidebarResizer {
+  width: 5px;
+  background: #c1c3c5;
+  cursor: col-resize;
+}
+
+.sidebarResizer:hover {
+  width: 8px;
+  background: #000;
 }
