Fixed AI Chat bottom too thick

--- a/frontend/styles/AIChat.module.css
+++ b/frontend/styles/AIChat.module.css
@@ -265,7 +265,7 @@
 .copyright {
   font-family: Merriweather Sans, sans;
   font-weight: bold;
-  padding: 10px 0;
+  padding: 0 0;
 }
 
 .sidebarResizer {
