--- a/frontend/styles/Account.module.css
+++ b/frontend/styles/Account.module.css
@@ -1,3 +1,8 @@
+.h1 {
+    padding: 10px 0 0 0;
+    text-align: center;
+    text-decoration: underline;
+}
 .parsersIcon {
   display: inline-block;
   color: #E31A2F;
@@ -116,6 +121,16 @@
 .main {
   flex-grow: 1;
   display: flex;
+}
+
+.profileDiv {
+    border: 3px solid #000;
+    margin: 0 30px;
+    padding: 30px;
+}
+
+.actions {
+    margin-top: 10px;
 }
 
 .footer {
