--- a/frontend/styles/WorkspaceHeader.module.css
+++ b/frontend/styles/WorkspaceHeader.module.css
@@ -1,3 +1,8 @@
+.h1 {
+    padding: 10px 0 0 0;
+    text-align: center;
+    text-decoration: underline;
+}
 .parsersIcon {
   display: inline-block;
   color: #E31A2F;
@@ -64,66 +69,4 @@
   border-top: 3px solid #000;
   margin: 0 0 0 0;
   opacity: 1.0;
-}
-
-.sideNavDiv {
-  flex-grow: 1;
-}
-
-.sideNavUl {
-  display: flex;
-  flex-direction: column;
-  background : #E31A2F;
-  margin: 0;
-  padding: 0;
-  width: 100%;
-  color: #fff;
-}
-
-.sideNavUl li {
-  width: 100%;
-  padding: 10px;
-  list-style: none;
-  text-align: center;
-  cursor: pointer;
-}
-
-.sideNavUl li:hover {
-  text-decoration: underline;
-  font-weight: bold;
-}
-
-.sideNavUl li.active {
-  text-decoration: underline;
-  font-weight: bold;
-}
-
-@media only screen and (max-width: 768px) {
-  .sideNavContainerDiv {
-    flex-grow: 1 !important;
-  }
-}
-
-.sideNavContainerDiv { 
-  position: relative;
-}
-
-.sidebarSizeControlDiv {
-  right: 0;
-  bottom: 0;
-}
-
-.main {
-  flex-grow: 1;
-  display: flex;
-}
-
-.footer {
-  border-top: 3px solid #000;
-}
-
-.copyright {
-  font-family: Merriweather Sans, sans;
-  font-weight: bold;
-  padding: 10px 0;
 }
