Checked in on 18/01/2024

--- a/frontend/styles/AIChat.module.css
+++ b/frontend/styles/AIChat.module.css
@@ -169,6 +169,11 @@
 
 .talkKeyToValue {
   overflow-wrap: break-word;
+  font-weight: bold;
+}
+
+.talkKeyToValue .talkValue {
+  font-weight: normal;
 }
 
 .talkActionDiv {
