--- a/frontend/styles/WorkspaceAIChat.module.css
+++ b/frontend/styles/WorkspaceAIChat.module.css
@@ -1,19 +1,14 @@
-.parsersH1 {
-    padding: 10px 0 0 0;
-    text-align: center;
-    text-decoration: underline;
-}
-
 .parsersUl {
-    padding: 10px 10px;
+    padding: 10px 0;
     margin: 0;
 }
 
 .parsersUl li {
     border: 3px solid #E31A2F;
     border-radius: 6px;
-    margin: 10px 0;
-    width: 100%;
+    margin: 10px;
+    width: 200px;
+    max-width: calc(50% - 20px);
     height: 120px;
     display: flex;
     justify-content: center;
@@ -61,21 +56,6 @@
   color: #E31A2F;
   line-height: 52px;
   vertical-align: top;
-}
-
-.uploadBoxWrapper {
-  width: 100%;
-  padding: 10px;
-}
-
-.uploadBox {
-  width: 100%;
-  padding: 10px;
-  border: 3px dotted #E31A2F;
-  border-radius: 6px;
-  text-align: center;
-  cursor: pointer;
-  position: relative;
 }
 
 .wrapper {
