Checked in on 07/03/2024

--- a/frontend/styles/AIChat.module.css
+++ b/frontend/styles/AIChat.module.css
@@ -21,7 +21,6 @@
     list-style: none;
     vertical-align: middle;
     float: left;
-    cursor: pointer;
     position: relative;
 }
 
@@ -50,6 +49,17 @@
     position: absolute;
     right: 5px;
     top: 5px;
+}
+
+.parserActions {
+    position: absolute;
+    right: 5px;
+    bottom: 5px;
+}
+
+.parserActions button {
+  margin-left: 10px;
+  cursor: pointer;
 }
 
 .documentsQueueTabWrapper {
