--- a/frontend/styles/WorkspaceLayout.module.css
+++ b/frontend/styles/WorkspaceLayout.module.css
@@ -3,6 +3,7 @@
   color: #E31A2F;
   line-height: 52px;
   vertical-align: top;
+  margin-left: 10px;
 }
 
 .wrapper {
@@ -71,6 +72,7 @@
 }
 
 .sideNavUl {
+  border-right: 3px solid #000;
   display: flex;
   flex-direction: column;
   background : #E31A2F;
