--- a/frontend/styles/Parser.module.css
+++ b/frontend/styles/Parser.module.css
@@ -5,12 +5,12 @@
 }
 
 .parsersUl {
-  padding: 0 0;
   margin: 0;
   display: grid;
   column-gap: 20px;
   row-gap: 20px;
   grid-template-columns: repeat(5, 1fr);
+  padding: 20px;
 }
 
 .parsersUl li {
