--- a/frontend/styles/Settings.module.css
+++ b/frontend/styles/Settings.module.css
@@ -1,11 +1,11 @@
 .h1 {
-    padding: 10px 0 0 0;
-    text-align: center;
-    text-decoration: underline;
+  padding: 10px 0 0 0;
+  text-align: center;
+  text-decoration: underline;
 }
 .parsersIcon {
   display: inline-block;
-  color: #E31A2F;
+  color: #e31a2f;
   line-height: 52px;
   vertical-align: top;
 }
@@ -41,7 +41,7 @@
 }
 
 .nav {
-  float: right
+  float: right;
 }
 
 .nav ul {
@@ -68,7 +68,7 @@
 .headerHr {
   border-top: 3px solid #000;
   margin: 0 0 0 0;
-  opacity: 1.0;
+  opacity: 1;
 }
 
 .sideNavDiv {
@@ -79,7 +79,7 @@
 .sideNavUl {
   display: flex;
   flex-direction: column;
-  background : #E31A2F;
+  background: #e31a2f;
   margin: 0;
   padding: 0;
   width: 100%;
@@ -110,7 +110,7 @@
   }
 }
 
-.sideNavContainerDiv { 
+.sideNavContainerDiv {
   position: relative;
 }
 
@@ -125,13 +125,13 @@
 }
 
 .profileDiv {
-    border: 3px solid #000;
-    margin: 0 30px;
-    padding: 30px;
+  border: 3px solid #000;
+  margin: 0 30px;
+  padding: 30px;
 }
 
 .actions {
-    margin-top: 10px;
+  margin-top: 10px;
 }
 
 .footer {
@@ -149,6 +149,11 @@
 }
 
 .agGridDiv {
-    flex-grow: 1;
-    padding: 0 10px;
+  flex-grow: 1;
+  padding: 0 10px;
+}
+
+.settingsWrapper {
+  width: 100%;
+  padding: 10px;
 }
