--- a/frontend/styles/Editor.module.css
+++ b/frontend/styles/Editor.module.css
@@ -153,6 +153,7 @@
   font-weight: bold;
   font-size: 24px;
   padding: 10px 0;
+  white-space: pre-wrap;
 }
 
 .streamTable {
@@ -250,7 +251,7 @@
   position: absolute;
 }
 
-.addFilterDropDownWrapper>* {
+.addFilterDropDownWrapper > * {
   float: right;
   margin-left: 10px;
 }
@@ -262,7 +263,7 @@
 .ruleConfigurations {
   padding: 10px;
   min-height: calc(100vh - 120px);
-  overflow-y: scroll
+  overflow-y: scroll;
 }
 
 .myReactCrop {
