--- a/frontend/styles/Editor.module.css
+++ b/frontend/styles/Editor.module.css
@@ -156,12 +156,18 @@
   white-space: pre-wrap;
 }
 
+.streamTableDiv {
+  width: 100%;
+  overflow-x: auto;
+}
+
 .streamTable {
   font-family: 'Consolas', monospace;
   font-size: 90%;
   box-shadow: 4px 4px 14px -8px rgb(0 0 0 / 75%);
   border: 1px solid #0d2434;
   width: 100%;
+  overflow-x: scroll;
 }
 
 .streamTable th {
